Add Valofe Channel and Visit Homepage Button

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
     <input type="radio" id="Daum" name="server" value="Daum">다음
     <input type="radio" id="MGame" name="server" value="MGame">엠게임
     <input type="radio" id="HanGame" name="server" value="HanGame">한게임
+    <input type="radio" id="Valofe" name="server" value="Valofe">밸로프
     <h3></h3>
     <input type="checkbox" id="saveId">ID 기억하기
-    <input type="checkbox" id="saveServer">서버 기억하기
+    <input type="checkbox" id="saveServer">서버 기억하기    
+    <button class="btnHomePage" name="homePage" id="btnHomePage">홈페이지</button>
   </body>
   <script src="renderer.js"></script>
 </html>
